tests/semantic_cases/invalid/typed_assignment_real_to_integer.ob0
MODULE Main;
VAR src: REAL;
VAR x: INTEGER;
BEGIN
  x := src
END Main.
